add sportsData route
