# src/controllers/sportsDataController.ts
@@ -1,0 +1,26 @@
+import { Controller, Get, Path, Route } from 'tsoa';
+
+import type { GamesId } from '../models/gamesData';
+import type { SportDetailRow, SportId, SportsEventRow } from '../models/sportsData';
+import { SportsDataService } from '../services/sportsDataService.js';
+
+@Route('sports')
+export class SportsDataController extends Controller {
+	@Get()
+	public async getAllSports(): Promise<SportId[]> {
+		return new SportsDataService().getAll();
+	}
+
+	@Get('{sport}')
+	public async getSports(@Path() sport: SportId): Promise<SportDetailRow | null> {
+		return new SportsDataService().get(sport);
+	}
+
+	@Get('{sport}/events/{game}')
+	public async getSportsEvent(
+		@Path() sport: SportId,
+		@Path() game: GamesId
+	): Promise<SportsEventRow | null> {
+		return new SportsDataService().getEvent(sport, game);
+	}
+}
